# tchaka

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  tchaka.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
tchaka/: commands.py  config.py  core.py  geo.py  main.py  state.py  utils.py
tests/: conftest.py  test_commands.py  test_config.py  test_core.py  test_main.py  test_properties.py  test_range_override.py  test_state_machine.py  test_utils.py
