[tool.poetry]
name = "tchaka"
version = "0.1.0-alpha"
description = "Euphemeral chat based on the position"
authors = ["sanix-darker <s4nixd@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {version = "^22.5", extras = ["job-queue"]}
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest_mock = "*"
trio = "*"
pytest-asyncio = "^1.1.0"
hypothesis = "^6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
